force-app/main/default/objects/VCC_Location_to_Addendum_IEN_Mapping__c/fields/Addendum_Title_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Title_Name_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Addendum Title Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>