force-app/main/default/objects/VCC_Location_to_Addendum_IEN_Mapping__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>