force-app/main/default/objects/VCC_Location_to_Addendum_IEN_Mapping__c/fields/VISN__c.field-meta.xml
<CustomField>
    <fullName>VISN__c</fullName>
    <label>VISN</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>