force-app/main/default/objects/VCC_Location_to_Addendum_IEN_Mapping__c/fields/VistA_Environment__c.field-meta.xml
<CustomField>
    <fullName>VistA_Environment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VistA Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>